# django-model-map

./: LICENSE  README.md  runtests.py  setup.cfg
.github/workflows/: django.yml  publish.yml
django_model_map/: apps.py
django_model_map/management/commands/: modelmap.py
tests/: models.py  test_command.py
