[metadata]
name = django-model-map
version = 0.3.0
description = A CLI tool to map Django model relationships for optimizing queries (select_related vs prefetch_related).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/swayll/django-model-map/
author = Nikolay Fedorov
author_email = 40500428+swayll@users.noreply.github.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django>=3.2
